syntax = "proto3";

option go_package= "github.com/jamoreno22/admin";

package lab3;

service DNS {

    rpc Ping(Message) returns (Message){}
    rpc Action(Command) returns (VectorClock){}
    rpc Spread(Log) returns (Message){}

}

service Broker {

    rpc DNSIsAvailable(Message) returns (DNSState){}
    rpc GetIP(Command) returns (PageInfo){}

}

message Message {
    string text = 1; 
}

message DNSState{
    bool dns1 = 1;
    bool dns2 = 2;
    bool dns3 = 3;
}

message Command{
    int32 action = 1;
    string name = 2;
    string domain = 3;
    string option = 4;
    string parameter = 5;
    string ip = 6;
}

message VectorClock{
    string name = 1;
    int32 rv1 = 2;
    int32 rv2 = 3;
    int32 rv3 = 4;
}

message PageInfo{
    string ip = 1;
    VectorClock rv = 2;
}

message Log{
    string name = 1;
    bytes data = 2;
}
